--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky",
+    "lint": "npx eslint --fix ."
   },
   "author": "nlu",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "@eslint/js": "^9.12.0",
     "eslint": "^9.12.0",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^15.10.0"
+    "globals": "^15.10.0",
+    "husky": "^9.1.6"
   }
 }
